--- a/asset-baker/CMakeLists.txt
+++ b/asset-baker/CMakeLists.txt
@@ -2,12 +2,11 @@ set(CMAKE_CXX_STANDARD 17)
 
 find_package(assimp REQUIRED)
 # Add source to this project's executable.
-add_executable (baker
-"asset_main.cpp")
+add_executable (baker "asset_main.cpp")
 
 set_property(TARGET baker PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:extra>")
 
-target_include_directories(baker PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
+target_include_directories(baker PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" )
 
-target_link_libraries(baker PUBLIC tinyobjloader stb_image json lz4 assetlib tinyGLTF nvtt glm assimp)
+target_link_libraries(baker PUBLIC tinyobjloader stb_image json lz4 assetlib tinyGLTF nvtt glm assimp::assimp)
 
