compiles and shader ready

--- a/asset-baker/CMakeLists.txt
+++ b/asset-baker/CMakeLists.txt
@@ -10,7 +10,7 @@ find_package(assimp REQUIRED)
 # Add source to this project's executable.
 add_executable (baker "asset_main.cpp")
 
-set_property(TARGET baker PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:extra>")
+#set_property(TARGET baker PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:extra>")
 set_target_properties(baker PROPERTIES LINK_DIRECTORIES ${CUDAToolkit_LIBRARY_DIR}) 
 
 target_include_directories(baker PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" )
