--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -19,7 +19,7 @@
       "inheritEnvironments": [ "msvc_x64_x64" ],
       "buildRoot": "${projectDir}\\vs-build\\${name}",
       "installRoot": "${env.USERPROFILE}\\CMakeBuilds\\${workspaceHash}\\install\\${name}",
-      "cmakeCommandArgs": "-DCMAKE_TOOLCHAIN_FILE=\"${env.VCPKG_ROOT}\\scripts\\buildsystems\\vcpkg.cmake\"",
+      "cmakeCommandArgs": "-DCMAKE_TOOLCHAIN_FILE=\"${env.VCPKG_ROOT}\\scripts\\buildsystems\\vcpkg.cmake\" -DBUILD_SHARED_LIBS=ON",
       "buildCommandArgs": "-v",
       "ctestCommandArgs": ""
     }
